# gpt-drawer

./: .flake8  .gitignore  admin_utils.py  conftest.py  djsfc.py  env.example  index  manage.py  note-extend  note-review  note-splitting  package-lock.json  package.json  pyproject.toml  rollup.config.js  router.py  text-splitting  tmp.py
.github/actions/python/: action.yml
.github/workflows/: pytest.yml
frontend/: Alias.svelte  App.svelte  Note.svelte  NoteNewModal.svelte  NoteSearch.svelte  Notebook.svelte  main.js  style.css
gpt_drawer/: api.py  asgi.py  settings.py  urls.py  wsgi.py
notes/: admin.py  api_views.py  example.py  models.py  node_reference_answer.py  openai.py  serializers.py  tasks.py  urls.py  views.py  widgets.py
notes/components/: editable_text.py  note.py  note_reference.py  note_select.py
notes/migrations/: 0001_initial.py  0002_auto_20230205_1807.py  0003_auto_20240228_2322.py  0004_auto_20240229_2359.py  0005_alter_note_options_alter_note_unique_together_and_more.py  0006_note_embedding.py  0007_note_generating_references.py  0008_remove_reference_embedding_remove_reference_question_and_more.py
notes/templates/: note.html  note_reference.html  note_reference_answer.html  notebook.html  notebooks.html
notes/templates/components/: note.html  note_edit.html  note_reference.html  note_reference_answer.html  note_reference_create.html  note_reference_edit.html  note_search.html  note_select.html  note_selected.html
notes/templates/unicorn/: editable_text.html  note.html  note_reference.html  note_select.html
notes/templates/widgets/: note_select.html
notes/tests/: factories.py  fixtures.py  test_admin.py  test_api.py  test_e2e.py  test_views.py
notes/views/: __init__.py  answer.py  asdf.py  common.py  note.py  note_select.py  note_select_tests.py  note_tests.py  notebook.py  notebook_tests.py
prompts/: note-extend
templates/: base.html  base_main.html
templates/registration/: login.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
users/tests/: fixtures.py
