[tool.poetry]
name = "gpt-drawer"
version = "0.1.0"
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_drawer"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.0,<3.3.0"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
drf-nested-routers = "^0.93.4"
openai = "^1.13.3"
pgvector = "^0.2.5"
django-q2 = "^1.6.1"
django-unicorn = "^0.60.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pytest = "==7.*"
pytest-django = "^4.5.2"
pytest-lazy-fixture = "^0.6.3"
factory-boy = "^3.2.1"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip_gitignore = true
line_length = 119
lines_after_imports = 2
# 5 = Hanging Grid Grouped
multi_line_output = 5
include_trailing_comma = true

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gpt_drawer.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
FAIL_INVALID_TEMPLATE_VARS = true
addopts = "--reuse-db"
